feat: Implemented roomType CRUD endpoints
